# suhack

files/: 01_repo_analyzer_agent.md  02_complexity_agent.md  03_risk_prediction_agent.md  04_repo_healer_agent.md  05_validation_agent.md  06_pr_agent.md  07_llm_safety.md  08_context_memory.md  ARCHITECTURE.md  (+2 more)
repo-healer/: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
repo-healer/.github/workflows/: ci.yml
repo-healer/app/: __init__.py  main.py
repo-healer/app/core/: config.py  context_store.py  exceptions.py  logging.py  schemas.py
repo-healer/app/modules/analyzer/: router.py  service.py
repo-healer/app/modules/complexity/: router.py  service.py
repo-healer/app/modules/pr/: router.py  service.py
repo-healer/app/modules/risk/: explainability.py  model_store.py  router.py  service.py
repo-healer/app/modules/validation/: router.py  service.py
repo-healer/app/pipeline/: orchestrator.py  router.py
repo-healer/frontend/: .env.local.example  package-lock.json  package.json
repo-healer/frontend/app/: globals.css  layout.tsx  page.tsx
repo-healer/frontend/app/file/[...path]/: page.tsx
repo-healer/frontend/app/heatmap/: page.tsx
repo-healer/frontend/components/: FileDiffViewer.tsx  PipelineStatusCard.tsx  RiskExplainCard.tsx  RiskHeatmap.tsx
repo-healer/frontend/lib/: api.ts
repo-healer/scripts/: seed_test_repo.sh  smoke_test.sh
repo-healer/tests/: conftest.py  test_01_analyzer.py  test_02_complexity.py  test_03_risk.py  test_05_validation.py  test_08_context_memory.py
